--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "mime-db": "^1.53.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
-  },
-  "devDependencies": {}
+  }
 }
